<resources>
    <string name="app_name">Log In</string>
    <string name="MainScreen">Main Screen</string>
    <string name="title_activity_main2">Home</string>
    <string name="Assigments">Assigments</string>
    <string name="TimeTableText">Time Table</string>
    <string name="ResultsTet">Results</string>
    <string name="title_activity_assigments">Assigments</string>
    <string name="title_activity_time_table">TimeTable</string>
    <string name="title_activity_results">Results</string>
    <string name="Home">Home</string>
    <string name="LogOut">Log Out</string>
    <string name="Register">Register</string>
    <string name="reg_title">Register Form</string>
    <string name="reg_name">Name</string>
    <string name="reg_studentNo">Student Number</string>
    <string name="reg_dob">Date of Birth dd/mm/yyyy</string>
    <string name="reg_email">adress@wit.ie</string>
    <string name="reg_password">Password</string>
    <string name="reg_createButton">Create Account</string>
    <string name="reg_crouse">Course Title</string>
    <string name="title_activity_assigments_view">assigmentsView</string>
    <string name="add_asigment">Add Assigment</string>
    <string name="ass_title">Assigment Title</string>
    <string name="ass_worth">Assigment worth</string>
    <string name="ass_dued">Assigment Due Date</string>
    <string name="btn_view">View Assigments</string>
    <string name="DisplayList">Display Assigments</string>
    <string name="EditAssigment">Editing Assigment</string>
    <string name="login_name">Name</string>
    <string name="login_pass">Password</string>
    <string name="login_login">Login</string>
    <string name="login_attemp">Number of attempts remaning:</string>
    <string name="login_reg">Register</string>
    <string name="timetable_intro">Please select your course</string>
    <string name="timetable_day">Please select the day</string>
    <string name="results_choose">Please choose the assigment</string>
    <string name="results_result">Your result is:</string>
    <string name="result_zero">0%</string>
    <string name="result_full">100%</string>
</resources>
